--- a/FrontEnd/ControleDeCustos/package.json
+++ b/FrontEnd/ControleDeCustos/package.json
@@ -25,10 +25,11 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "jquery": "3.1.1",
+    "ng2-toastr": "^4.1.2",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
     "ts-helpers": "1.1.2",
-    "web-animations-js": "2.2.5",
+    "web-animations-js": "^2.2.5",
     "zone.js": "0.8.16"
   },
   "devDependencies": {
